--- a/index.html
+++ b/index.html
@@ -32,8 +32,62 @@
                 </td>
                 <td style="background: #8fb4d6;">
                     <div id="personal-statement">
+                        <h2 class="name">Ambient Gamma Wave Frequency Light and Sound Source for the treatment or prevention of Alzheimer disease</h2>
                         <p>
-                        More coming soon!
+                            <img class="profile-picture" src="Prospectus picture.pdf" width="100%" alt="" class="w3-hover-sepia"/>
+                        </p>
+                        <p>
+                            Based on MIT research showing gamma frequency entrainment attenuates amyloid load in mouse models
+                        </p>
+                        <p>
+                            Produces auditory and visual stimuli at 40 Hz
+                        </p>
+                        <p>
+                            Screws into standard light socket
+                        </p>
+                        <p>
+                            Simple, compact design with small form factor
+                        </p>
+                        <p>
+                            Programming versatility, prototype code in C++
+                        </p>
+                        <p>
+                            U.S. Provisional Pat. Ser. No. 62857158
+                        </p>
+                        <p><a href="Prospectus_updated.pdf">Prospectus</a></p>
+                        <p><a href="Specification.pdf">Specification</a></p>
+                        <h2 class="name">Pressure-Sensing Gastric Calibration Tube for minimizing sleeve volume variation in sleeve gastrectomy</h2>
+                        <p>
+                            <img class="profile-picture" src="Image 2.tif" width="100%" alt="" class="w3-hover-sepia"/>
+                        </p>
+                        <p>
+                            Significant variation in gastric sleeve volumes due to surgical technique can lead to suboptimal outcomes for patients
+                        </p>
+                        <p>
+                            Direct control over volume displacement and real-time pressure readings may lead to improved consistency of sleeve results
+                        </p>
+                        <p>
+                            Device incorporates specially-designed balloons connected through tubing to pressure sensors on a custom PCB which interfaces with device via USB
+                        </p>
+                        <p>
+                            Balloon molds created in CAD and 3D printed
+                        </p>
+                        <p>
+                            PCB designed with EDA software, incorporates commercially-available pressure sensors and an Arduino Micro running C++ code
+                        </p>
+                        <p>
+                            GUI created using Python 2.7
+                        </p>
+                        <p>
+                            Preliminary testing in porcine gastric explants, <a href="https://pubmed.ncbi.nlm.nih.gov/32748199/">see study here</a>
+                        </p>
+                        <p>
+                            U.S. Provisional Pat. Ser. No. 62806933
+                        </p>
+                        <p><a href="Specification1.pdf">Specification</a></p>
+                        <p><a href="42 Fr Drawing_Ludwig_1.pdf">First-generation (obsolete) balloon and tubing schematic</a></p>
+                        <p>
+                        <h3 More coming soon! /h3>
                         </p>
                         <p></p>
                     </div>
