--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <td style="background: #8fb4d6;">
                     <div id="personal-statement">
                         <h2 class="name">Ambient Gamma Wave Frequency Light and Sound Source for the treatment or prevention of Alzheimer disease</h2>
-                        <br>
+                        <br><br><p></p>
                         <div id="profile-picture">
-                            <img class="profile-picture" src="0001.jpg" width="50%" alt="" class="w3-hover-sepia"/>
-                        </div>
+                            <img class="profile-picture" src="0001.jpg" width="60%" alt="" class="w3-hover-sepia"/>
+                        </div><br>
                         <p>
                             Based on MIT research showing gamma frequency entrainment attenuates amyloid load in mouse models
                         </p>
@@ -56,10 +56,10 @@
                         <p><a href="Prospectus_updated.pdf">Prospectus</a></p>
                         <p><a href="Specification.pdf">Specification</a></p>
                         <h2 class="name">Pressure-Sensing Gastric Calibration Tube for minimizing sleeve volume variation in sleeve gastrectomy</h2>
-                        <br>
+                        <br><br><p></p>
                         <div id="profile-picture">
-                            <img class="profile-picture" src="Image 2.jpg" width="50%" alt="" class="w3-hover-sepia"/>
-                        </div>
+                            <img class="profile-picture" src="Image 2.jpg" width="60%" alt="" class="w3-hover-sepia"/>
+                        </div><br>
                         <p>
                             Significant variation in gastric sleeve volumes due to surgical technique can lead to suboptimal outcomes for patients
                         </p>
