--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <br><br><p></p>
                     </div>
                     <div id="profile-picture">
-                            <img class="profile-picture" src="0001.jpg" width="60%" alt="" class="w3-hover-sepia" class="center"/>
+                            <img class="profile-picture1" src="0001.jpg" width="60%" alt="" class="w3-hover-sepia" class="center"/>
                     </div><br>
                     <div id="personal-statement">
                         <p>
