--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         <h2 class="name">Ambient Gamma Wave Frequency Light and Sound Source for the treatment or prevention of Alzheimer disease</h2>
                         <br><br><p></p>
                     </div>
-                    <div id="profile-picture">
-                            <img class="profile-picture1" src="0001.jpg" width="60%" alt="" class="w3-hover-sepia" class="center"/>
+                    <div id="profile-picture1">
+                            <img class="profile-picture1" src="0001.jpg" width="65%" alt="" class="w3-hover-sepia" class="center"/>
                     </div><br>
                     <div id="personal-statement">
                         <p>
