--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </td>
                 <td style="background: #8fb4d6;">
                     <div id="personal-statement">
-                        <h2 class="name">Ambient Gamma Wave Frequency Light and Sound Source for the treatment or prevention of Alzheimer disease</h2>
+                        <h2 class="name">Ambient gamma wave frequency light and sound source for the treatment or prevention of Alzheimer disease</h2>
                         <br><br><p></p>
                     </div>
                     <div id="profile-picture1">
@@ -57,7 +57,7 @@
                         </p>
                         <p><a href="Prospectus_updated.pdf">Prospectus</a></p>
                         <p><a href="Specification.pdf">Specification</a></p>
-                        <h2 class="name">Pressure-Sensing Gastric Calibration Tube for minimizing sleeve volume variation in sleeve gastrectomy</h2>
+                        <h2 class="name">Pressure-sensing gastric calibration tube for minimizing sleeve volume variation in sleeve gastrectomy</h2>
                         <br><br><p></p>
                     </div>
                     <div id="profile-picture">
