--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             Simple, compact design with small form factor
                         </p>
                         <p>
-                            Programming versatility, prototype code in C++
+                            Programming versatility, prototype runs C++ code
                         </p>
                         <p>
                             U.S. Provisional Pat. Ser. No. 62857158
