--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         
         <div class="created">
             <br>
-            <p>Created by Parker E. Ludwig</p>
+            <p>Created by Parker E. Ludwig</p><p>&#169; 2020 Parker Ludwig</p>
         </div>
         
     </div>
