--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         <p>
                             U.S. Provisional Pat. Ser. No. 62857158
                         </p>
-                        <p><a href="Prospectus_updated.pdf">Prospectus</a></p>
-                        <p><a href="Specification.pdf">Specification</a></p>
+                        <p><a href="Prospectus_updated.pdf" target="_blank" rel="noopener noreferrer">Prospectus</a></p>
+                        <p><a href="Specification.pdf" target="_blank" rel="noopener noreferrer">Specification</a></p>
                         <h2 class="name">Pressure-sensing gastric calibration tube for minimizing sleeve volume variation in sleeve gastrectomy</h2>
                         <br><br><p></p>
                     </div>
@@ -88,8 +88,8 @@
                         <p>
                             U.S. Provisional Pat. Ser. No. 62806933
                         </p>
-                        <p><a href="Specification1.pdf">Specification</a></p>
-                        <p><a href="42 Fr Drawing_Ludwig_1.pdf">First-generation (obsolete) balloon and tubing schematic</a></p>
+                        <p><a href="Specification1.pdf" target="_blank" rel="noopener noreferrer">Specification</a></p>
+                        <p><a href="42 Fr Drawing_Ludwig_1.pdf" target="_blank" rel="noopener noreferrer">First-generation (obsolete) balloon and tubing schematic</a></p>
                         <p>
                         <h3 More coming soon! /h3>
                         </p>
