--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             GUI created using Python 2.7
                         </p>
                         <p>
-                            Preliminary testing in porcine gastric explants, <a href="https://pubmed.ncbi.nlm.nih.gov/32748199/">see study here</a>
+                            Preliminary testing in porcine gastric explants, <a href="https://pubmed.ncbi.nlm.nih.gov/32748199/" target="_blank" rel="noopener noreferrer">see study here</a>
                         </p>
                         <p>
                             U.S. Provisional Pat. Ser. No. 62806933
